--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -2,10 +2,13 @@ doctype html
 html
   head
     title
-      = yield(:title)
+      = full_title(yield(:title))
       |  | Ruby on Rails Tutorial Sample App
     = csrf_meta_tags
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   body
-    = yield
+    = render 'layouts/header'
+    .container
+      = yield
+      = render 'layouts/footer'
