--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,5 +10,8 @@ html
   body
     = render 'layouts/header'
     .container
-      = yield
-      = render 'layouts/footer'
+      - flash.each do |message_type, message|
+        = content_tag(:div, message, class: "alert alert-#{message_type}")
+    = yield
+    = render 'layouts/footer'
+    = debug(params) if Rails.env.development?
