Implemented advanced login

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -26,6 +26,10 @@ textarea {
   }
 }
 
+.img {
+  margin-left: 30px;
+}
+
 /* typography */
 
 h1, h2, h3, h4, h5, h6 {
@@ -74,7 +78,7 @@ p {
 /* footer */
 
 footer {
-  margin-top: 45px;
+  margin: 45px;
   padding-top: 5px;
   border-top: 1px solid $gray-medium-light;
   color: $gray-light;
@@ -176,4 +180,18 @@ input {
   .form-control {
     color: $state-danger-text;
   }
+}
+
+.checkbox {
+  margin-top: -10px;
+  margin-bottom: 10px;
+  span {
+    margin-left: 20px;
+    font-weight: normal;
+  }
+}
+
+#session_remember_me {
+  width: auto;
+  margin-left: 0;
 }
