--- a/app/views/static_pages/home.html.slim
+++ b/app/views/static_pages/home.html.slim
@@ -7,5 +7,5 @@
       | Ruby on Rails Tutorial
     |  sample application. 
   = link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary"
-= link_to image_tag("rails.png", alt: "Rails logo"),
+= link_to image_tag("rails.png", alt: "Rails logo", class: 'img'),
 -             'http://rubyonrails.org/'
